[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dlvm-exploration"
description = "Deep Latent Variable Models (DLVM) Exploration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["version"]
dependencies = [
    "numpy>=1.19.2",
    "torch>=1.8.0",
    "matplotlib>=3.3.4",
    "scikit-learn>=0.24.1",
    "pandas>=1.2.3",
    "seaborn>=0.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[tool.setuptools_scm]
write_to = "dlvm-exploration/_version.py"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
